Испраил отображание карточек на таймлайне в зависмости от их размера